--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^13.0.0",
         "@testing-library/user-event": "^13.2.1",
+        "gh-pages": "^4.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-is": "^18.2.0",
@@ -23,6 +24,8 @@
         "web-vitals": "^2.1.0"
     },
     "scripts": {
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
@@ -48,5 +51,6 @@
     },
     "resolutions": {
         "styled-components": "^5"
-    }
+    },
+    "homepage": "https://barbarabzbs.github.io/french_cookies"
 }
