--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
         "@testing-library/jest-dom": "^5.14.1",
         "@testing-library/react": "^13.0.0",
         "@testing-library/user-event": "^13.2.1",
-        "gh-pages": "^4.0.0",
+        "netlify-cli": "^12.0.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-is": "^18.2.0",
@@ -24,8 +24,6 @@
         "web-vitals": "^2.1.0"
     },
     "scripts": {
-        "predeploy": "npm run build",
-        "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
@@ -51,6 +49,5 @@
     },
     "resolutions": {
         "styled-components": "^5"
-    },
-    "homepage": "https://barbarabzbs.github.io/french_cookies"
+    }
 }
